tests/paczka1/fuzzy1/55082710.err
Error in line 2: 8eXs9RWB7 S178 19,7
Error in line 8: S178 A767 14,7
Error in line 19: W9vNbWOW S178 2,1
Error in line 25: S´78 S´´5 9,6
Error in line 16: cvTMa S115 98,9
Error in line 15: 8eXs9RWB7 S115 72,4
Error in line 34: W9vNbWOW A767 33,5
